Proposal: Completed everything except references

--- a/CS 4391 Project Proposal/egbib.bib
+++ b/CS 4391 Project Proposal/egbib.bib
@@ -58,6 +58,26 @@
 
 
 
+@article{Kavanaugh1976,
+Author = {Kavanaugh, Robert D.},
+Journal = {Child Development},
+Month = {Sep},
+Number = {3},
+Pages = {885-887},
+Title = {On the Synonymity of 'more' and 'less': Comments on a Methodology},
+Volume = {47},
+Year = {1976}
+}
+
+@book{Saussure1995,
+Author = {Ferdinand de Saussure},
+Publisher = {Payot},
+Title = {Cours de Linguistique G{\'e}n{\'e}rale},
+Year = {1995}
+}
+
+
+
 @misc{Authors14,
  author = {FirstName LastName},
  title = {The frobnicatable foo filter},
