--- a/CS 4391 Project Proposal/egbib.bib
+++ b/CS 4391 Project Proposal/egbib.bib
@@ -1,131 +1,66 @@
-@String(PAMI = {IEEE Trans. Pattern Anal. Mach. Intell.})
-@String(IJCV = {Int. J. Comput. Vis.})
-@String(CVPR= {IEEE Conf. Comput. Vis. Pattern Recog.})
-@String(ICCV= {Int. Conf. Comput. Vis.})
-@String(ECCV= {Eur. Conf. Comput. Vis.})
-@String(NIPS= {Adv. Neural Inform. Process. Syst.})
-@String(ICPR = {Int. Conf. Pattern Recog.})
-@String(BMVC= {Brit. Mach. Vis. Conf.})
-@String(TOG= {ACM Trans. Graph.})
-@String(TIP  = {IEEE Trans. Image Process.})
-@String(TVCG  = {IEEE Trans. Vis. Comput. Graph.})
-@String(TMM  = {IEEE Trans. Multimedia})
-@String(ACMMM= {ACM Int. Conf. Multimedia})
-@String(ICME = {Int. Conf. Multimedia and Expo})
-@String(ICASSP=	{ICASSP})
-@String(ICIP = {IEEE Int. Conf. Image Process.})
-@String(ACCV  = {ACCV})
-@String(ICLR = {Int. Conf. Learn. Represent.})
-@String(IJCAI = {IJCAI})
-@String(PR   = {Pattern Recognition})
-@String(AAAI = {AAAI})
-@String(CVPRW= {IEEE Conf. Comput. Vis. Pattern Recog. Worksh.})
-@String(CSVT = {IEEE Trans. Circuit Syst. Video Technol.})
-
-@String(SPL	= {IEEE Sign. Process. Letters})
-@String(VR   = {Vis. Res.})
-@String(JOV	 = {J. Vis.})
-@String(TVC  = {The Vis. Comput.})
-@String(JCST  = {J. Comput. Sci. Tech.})
-@String(CGF  = {Comput. Graph. Forum})
-@String(CVM = {Computational Visual Media})
-
-
-@String(PAMI  = {IEEE TPAMI})
-@String(IJCV  = {IJCV})
-@String(CVPR  = {CVPR})
-@String(ICCV  = {ICCV})
-@String(ECCV  = {ECCV})
-@String(NIPS  = {NeurIPS})
-@String(ICPR  = {ICPR})
-@String(BMVC  =	{BMVC})
-@String(TOG   = {ACM TOG})
-@String(TIP   = {IEEE TIP})
-@String(TVCG  = {IEEE TVCG})
-@String(TCSVT = {IEEE TCSVT})
-@String(TMM   =	{IEEE TMM})
-@String(ACMMM = {ACM MM})
-@String(ICME  =	{ICME})
-@String(ICASSP=	{ICASSP})
-@String(ICIP  = {ICIP})
-@String(ACCV  = {ACCV})
-@String(ICLR  = {ICLR})
-@String(IJCAI = {IJCAI})
-@String(PR = {PR})
-@String(AAAI = {AAAI})
-@String(CVPRW= {CVPRW})
-@String(CSVT = {IEEE TCSVT})
-
-
-
-@article{Kavanaugh1976,
-Author = {Kavanaugh, Robert D.},
-Journal = {Child Development},
-Month = {Sep},
-Number = {3},
-Pages = {885-887},
-Title = {On the Synonymity of 'more' and 'less': Comments on a Methodology},
-Volume = {47},
-Year = {1976}
+@article{zhang2015,
+ author = {Zhang, Zhifei},
+ title = {Image Noise: Detection, Measurement, and Removal Techniques},
+ year = {2015},
 }
 
-@book{Saussure1995,
-Author = {Ferdinand de Saussure},
-Publisher = {Payot},
-Title = {Cours de Linguistique G{\'e}n{\'e}rale},
-Year = {1995}
+@article{abreu1996,
+ Author = {E. Abreu and M. Lightstone and S. K. Mitra and K. Arakawa},
+ Title = {A New Efficient Approach for the Removal of Impulse Noise from Highly Corrupted Images},
+ Journal = {IEEE Transactions on Image Processing},
+ Volume = {5},
+ Number = {6},
+ Pages = {1012-1025},
+ Month = {June},
+ Year = {1996},
+ Doi = {10.1109/83.503916},
 }
 
-
-
-@misc{Authors14,
- author = {FirstName LastName},
- title = {The frobnicatable foo filter},
- note = {Face and Gesture submission ID 324. Supplied as supplemental material {\tt fg324.pdf}},
- year = 2014
+@article{nikolova2004,
+ Author = {Nikolova, M.},
+ Title = {A Variational Approach to Remove Outliers and Impulse Noise},
+ Journal = {Journal of Mathematical Imaging and Vision},
+ Volume = {20},
+ Pages = {99-120},
+ Year = {2004},
+ Doi = {https://doi.org/10.1023/B:JMIV.0000011326.88682.e5},
 }
 
-@misc{Authors14b,
- author = {FirstName LastName},
- title = {Frobnication tutorial},
- note = {Supplied as supplemental material {\tt tr.pdf}},
- year = 2014
+@article{chan2005,
+ Author = {Raymond Chan and Chung-Wa Ho and Mila Nikolova},
+ Title = {Salt-and-Pepper Noise Removal by Median-Type Noise Detectors and Detail-Preserving Regularization},
+ Journal = {IEEE Transactions on Image Processing},
+ Volume = {14},
+ Number = {10},
+ Pages = {1479-1485},
+ Year = {2005},
+ Doi = {10.1109/TIP.2005.852196},
 }
 
-@article{Alpher02,
-author = {FirstName Alpher},
-title = {Frobnication},
-journal = PAMI,
-volume = 12,
-number = 1,
-pages = {234--778},
-year = 2002
+@article{huang2021,
+ Author = {Keya Huang and Hairong Zhu},
+ Title = {Image Noise Removal Method Based on Improved Nonlocal Mean Algorithm},
+ Journal = {Complexity},
+ Volume = {2021},
+ Pages = {Article ID 5578788, 10 pages},
+ Year = {2021},
+ Doi = {10.1155/2021/5578788},
 }
 
-@article{Alpher03,
-author = {FirstName Alpher and  FirstName Fotheringham-Smythe},
-title = {Frobnication revisited},
-journal = {Journal of Foo},
-volume = 13,
-number = 1,
-pages = {234--778},
-year = 2003
+@article{chan2005-2,
+ Author = {R. H. Chan and C.-W. Ho and M. Nikolova},
+ Title = {Salt-and-Pepper Noise Removal by Median-Type Noise Detectors and Detail-Preserving Regularization},
+ Journal = {IEEE Transactions on Image Processing},
+ Volume = {14},
+ Number = {10},
+ Pages = {1479-1485},
+ Year = {2005},
 }
 
-@article{Alpher04,
-author = {FirstName Alpher and FirstName Fotheringham-Smythe and FirstName Gamow},
-title = {Can a machine frobnicate?},
-journal = {Journal of Foo},
-volume = 14,
-number = 1,
-pages = {234--778},
-year = 2004
-}
-
-@inproceedings{Alpher05,
-author = {FirstName Alpher and FirstName Gamow},
-title = {Can a computer frobnicate?},
-booktitle = CVPR,
-pages = {234--778},
-year = 2005
+@misc{sipi_misc,
+ author = {USC Signal and Image Processing Institute},
+ title = {{SIPI Image Database}},
+ howpublished = "\url{https://sipi.usc.edu/database/database.php?volume=misc}",
+ year = {2023},
+ note = "[Online; accessed 18-October-2023]"
 }
