Updated title of proposal

--- a/CS 4391 Project Proposal/PaperForReview.tex
+++ b/CS 4391 Project Proposal/PaperForReview.tex
@@ -47,7 +47,7 @@
 \begin{document}
 
 %%%%%%%%% TITLE - PLEASE UPDATE
-    \title{SCE: Developing a New Edge-preserving Image Smoothing Algorithm for Impulse Noise}
+    \title{Smooth Criminal Edges: Developing a New Edge-preserving Image Smoothing Algorithm for Impulse Noise}
 
     \author{Sherry Cherniavsky\\
     University of Texas at Dallas\\
