--- a/CS 4391 Project Proposal/egbib.bib
+++ b/CS 4391 Project Proposal/egbib.bib
@@ -1,6 +1,7 @@
 @article{zhang2015,
  author = {Zhang, Zhifei},
- title = {Image Noise: Detection, Measurement, and Removal Techniques},
+ title = {Image Noise Detection, Measurement, and Removal Techniques},
+ Journal = "\url{https://zzutk.github.io/docs/reports/2015.07%20-%20Image%20Noise%20Detection,%20Measurement,%20and%20Removal%20Techniques.pdf}",
  year = {2015},
 }
 
